--- a/artikel/13.tex
+++ b/artikel/13.tex
@@ -26,7 +26,7 @@
      Interessen, die von dem \hyperref[itm:04-7]{Verantwortlichen} oder einem Dritten verfolgt werden;
     \label{itm:13-1d}
 
-    \item gegebenenfalls die Empfänger oder Kategorien von Empfängern der \hyperref[itm:04-1]{personenbezogenen Daten} und
+    \item gegebenenfalls die \hyperref[itm:04-9]{Empfänger} oder Kategorien von \hyperref[itm:04-9]{Empfängern} der \hyperref[itm:04-1]{personenbezogenen Daten} und
     \label{itm:13-1e}
 
     \item gegebenenfalls die Absicht des \hyperref[itm:04-7]{Verantwortlichen}, die \hyperref[itm:04-1]{personenbezogenen Daten} an ein Drittland oder eine
