--- a/artikel/14.tex
+++ b/artikel/14.tex
@@ -25,10 +25,10 @@
     \item die Kategorien \hyperref[itm:04-1]{personenbezogener Daten}, die verarbeitet werden;
     \label{itm:14-1d}
 
-    \item gegebenenfalls die Empfänger oder Kategorien von Empfängern der \hyperref[itm:04-1]{personenbezogenen Daten};
+    \item gegebenenfalls die \hyperref[itm:04-9]{Empfänger} oder Kategorien von \hyperref[itm:04-9]{Empfängern} der \hyperref[itm:04-1]{personenbezogenen Daten};
     \label{itm:14-1e}
 
-    \item gegebenenfalls die Absicht des \hyperref[itm:04-7]{Verantwortlichen}, die \hyperref[itm:04-1]{personenbezogenen Daten} an einen Empfänger in einem
+    \item gegebenenfalls die Absicht des \hyperref[itm:04-7]{Verantwortlichen}, die \hyperref[itm:04-1]{personenbezogenen Daten} an einen \hyperref[itm:04-9]{Empfänger} in einem
      Drittland oder einer internationalen Organisation zu übermitteln, sowie das Vorhandensein oder das Fehlen eines
      Angemessenheitsbeschlusses der Kommission oder im Falle von Übermittlungen gemäß \hyperref[ch:46]{Artikel 46} oder
      \hyperref[ch:47]{Artikel 47} oder \hyperref[itm:49-1-2]{Artikel 49 Absatz 1 Unterabsatz 2} einen Verweis auf die
@@ -92,7 +92,7 @@
      spätestens zum Zeitpunkt der ersten Mitteilung an sie, oder,
     \label{itm:14-3b}
 
-    \item falls die Offenlegung an einen anderen Empfänger beabsichtigt ist, spätestens zum Zeitpunkt der ersten
+    \item falls die Offenlegung an einen anderen \hyperref[itm:04-9]{Empfänger} beabsichtigt ist, spätestens zum Zeitpunkt der ersten
      Offenlegung.
     \label{itm:14-3c}
 
