--- a/artikel/15.tex
+++ b/artikel/15.tex
@@ -19,8 +19,8 @@
     \item die Kategorien \hyperref[itm:04-1]{personenbezogener Daten}, die verarbeitet werden;
     \label{itm:15-1b}
 
-    \item die Empfänger oder Kategorien von Empfängern, gegenüber denen die \hyperref[itm:04-1]{personenbezogenen Daten} offengelegt worden
-     sind oder noch offengelegt werden, insbesondere bei Empfängern in Drittländern oder bei internationalen
+    \item die \hyperref[itm:04-9]{Empfänger} oder Kategorien von \hyperref[itm:04-9]{Empfängern}, gegenüber denen die \hyperref[itm:04-1]{personenbezogenen Daten} offengelegt worden
+     sind oder noch offengelegt werden, insbesondere bei \hyperref[itm:04-9]{Empfängern} in Drittländern oder bei internationalen
      Organisationen;
     \label{itm:15-1c}
 
