--- a/artikel/19.tex
+++ b/artikel/19.tex
@@ -5,11 +5,11 @@
 
 \addsec{Text der Verordnung}
 
-Der \hyperref[itm:04-7]{Verantwortliche} teilt allen Empfängern, denen \hyperref[itm:04-1]{personenbezogenen Daten} offengelegt wurden, jede Berichtigung oder
+Der \hyperref[itm:04-7]{Verantwortliche} teilt allen \hyperref[itm:04-9]{Empfängern}, denen \hyperref[itm:04-1]{personenbezogenen Daten} offengelegt wurden, jede Berichtigung oder
 Löschung der \hyperref[itm:04-1]{personenbezogenen Daten} oder eine \hyperref[itm:04-3]{Einschränkung der Verarbeitung} nach \hyperref[ch:16]{Artikel 16},
 \hyperref[itm:17-1]{Artikel 17 Absatz 1} und \hyperref[ch:18]{Artikel 18} mit, es sei denn, dies erweist sich als
 unmöglich oder ist mit einem unverhältnismäßigen Aufwand verbunden. Der \hyperref[itm:04-7]{Verantwortliche} unterrichtet die \hyperref[itm:04-1]{betroffene
-Person} über diese Empfänger, wenn die \hyperref[itm:04-1]{betroffene Person} dies verlangt.
+Person} über diese \hyperref[itm:04-9]{Empfänger}, wenn die \hyperref[itm:04-1]{betroffene Person} dies verlangt.
 
 \addsec{Eigene Notizen}
 
