--- a/artikel/30.tex
+++ b/artikel/30.tex
@@ -22,8 +22,8 @@
     \item eine Beschreibung der Kategorien \hyperref[itm:04-1]{betroffener Personen} und der Kategorien \hyperref[itm:04-1]{personenbezogener Daten};
     \label{itm:30-1c}
 
-    \item die Kategorien von Empfängern, gegenüber denen die \hyperref[itm:04-1]{personenbezogenen Daten} offengelegt worden sind oder noch
-     offengelegt werden, einschließlich Empfänger in Drittländern oder internationalen Organisationen;
+    \item die Kategorien von \hyperref[itm:04-9]{Empfängern}, gegenüber denen die \hyperref[itm:04-1]{personenbezogenen Daten} offengelegt worden sind oder noch
+     offengelegt werden, einschließlich \hyperref[itm:04-9]{Empfänger} in Drittländern oder internationalen Organisationen;
     \label{itm:30-1d}
 
     \item gegebenenfalls Übermittlungen von \hyperref[itm:04-1]{personenbezogenen Daten} an ein Drittland oder an eine \hyperref[itm:04-29]{internationale
