--- a/artikel/46.tex
+++ b/artikel/46.tex
@@ -52,7 +52,7 @@
   \begin{enumerate}
   
     \item Vertragsklauseln, die zwischen dem \hyperref[itm:04-7]{Verantwortlichen} oder dem \hyperref[itm:04-8]{Auftragsverarbeiter} und dem \hyperref[itm:04-7]{Verantwortlichen}, dem
-     \hyperref[itm:04-8]{Auftragsverarbeiter} oder dem Empfänger der \hyperref[itm:04-1]{personenbezogenen Daten} im Drittland oder der internationalen
+     \hyperref[itm:04-8]{Auftragsverarbeiter} oder dem \hyperref[itm:04-9]{Empfänger} der \hyperref[itm:04-1]{personenbezogenen Daten} im Drittland oder der internationalen
      Organisation vereinbart wurden, oder
     \label{itm:46-3a}
 
