--- a/artikel/58.tex
+++ b/artikel/58.tex
@@ -67,7 +67,7 @@
     \label{itm:58-2f}
 
     \item die Berichtigung oder Löschung von \hyperref[itm:04-1]{personenbezogenen Daten} oder die \hyperref[itm:04-3]{Einschränkung der Verarbeitung} gemäß den
-     Artikeln \hyperref[ch:16]{16}, \hyperref[ch:17]{17} und \hyperref[ch:17]{18} und die Unterrichtung der Empfänger,
+     Artikeln \hyperref[ch:16]{16}, \hyperref[ch:17]{17} und \hyperref[ch:17]{18} und die Unterrichtung der \hyperref[itm:04-9]{Empfänger},
      an die diese \hyperref[itm:04-1]{personenbezogenen Daten} gemäß \hyperref[itm:17-2]{Artikel 17 Absatz 2} und \hyperref[ch:19]
      {Artikel 19} offengelegt wurden, über solche Maßnahmen anzuordnen,
     \label{itm:58-2g}
@@ -82,7 +82,7 @@
      Absatz genannten Maßnahmen, je nach den Umständen des Einzelfalls,
     \label{itm:58-2i}
 
-    \item die Aussetzung der Übermittlung von Daten an einen Empfänger in einem Drittland oder an eine \hyperref[itm:04-29]{internationale
+    \item die Aussetzung der Übermittlung von Daten an einen \hyperref[itm:04-9]{Empfänger} in einem Drittland oder an eine \hyperref[itm:04-29]{internationale
      Organisation} anzuordnen.
     \label{itm:58-2j}
 
