--- a/artikel/83.tex
+++ b/artikel/83.tex
@@ -103,7 +103,7 @@
     \item die Rechte der \hyperref[itm:04-1]{betroffenen Person} gemäß den Artikeln \hyperref[ch:12]{12} bis \hyperref[ch:22]{22};
     \label{itm:83-5b}
 
-    \item die Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an einen Empfänger in einem Drittland oder an eine \hyperref[itm:04-29]{internationale
+    \item die Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an einen \hyperref[itm:04-9]{Empfänger} in einem Drittland oder an eine \hyperref[itm:04-29]{internationale
      Organisation} gemäß den Artikeln \hyperref[ch:44]{44} bis \hyperref[ch:49]{49};
     \label{itm:83-5c}
 
