--- a/artikel/04.tex
+++ b/artikel/04.tex
@@ -58,7 +58,7 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
   \label{itm:04-8}
 
   \item „Empfänger“ eine natürliche oder juristische Person, Behörde, Einrichtung oder andere Stelle, der
-   \hyperref[itm:04-1]{personenbezogene Daten} offengelegt werden, unabhängig davon, ob es sich bei ihr um einen Dritten handelt oder nicht.
+   \hyperref[itm:04-1]{personenbezogene Daten} offengelegt werden, unabhängig davon, ob es sich bei ihr um einen \hyperref[itm:04-10]{Dritten} handelt oder nicht.
    Behörden, die im Rahmen eines bestimmten Untersuchungsauftrags nach dem Unionsrecht oder dem Recht der
    Mitgliedstaaten möglicherweise \hyperref[itm:04-1]{personenbezogene Daten} erhalten, gelten jedoch nicht als Empfänger; die \hyperref[itm:04-2]{Verarbeitung}
    dieser Daten durch die genannten Behörden erfolgt im Einklang mit den geltenden Datenschutzvorschriften gemäß den
