--- a/artikel/06.tex
+++ b/artikel/06.tex
@@ -31,7 +31,7 @@
      in Ausübung öffentlicher Gewalt erfolgt, die dem \hyperref[itm:04-7]{Verantwortlichen} übertragen wurde;
     \label{itm:06-1e}
 
-    \item die \hyperref[itm:04-2]{Verarbeitung} ist zur Wahrung der berechtigten Interessen des \hyperref[itm:04-7]{Verantwortlichen} oder eines Dritten
+    \item die \hyperref[itm:04-2]{Verarbeitung} ist zur Wahrung der berechtigten Interessen des \hyperref[itm:04-7]{Verantwortlichen} oder eines \hyperref[itm:04-10]{Dritten}
      erforderlich, sofern nicht die Interessen oder Grundrechte und Grundfreiheiten der \hyperref[itm:04-1]{betroffenen Person}, die den
      Schutz \hyperref[itm:04-1]{personenbezogener Daten} erfordern, überwiegen, insbesondere dann, wenn es sich bei der \hyperref[itm:04-1]{betroffenen Person}
      um ein Kind handelt.
