--- a/artikel/13.tex
+++ b/artikel/13.tex
@@ -23,7 +23,7 @@
     \label{itm:13-1c}
 
     \item wenn die \hyperref[itm:04-2]{Verarbeitung} auf \hyperref[itm:06-1f]{Artikel 6 Absatz 1 Buchstabe f} beruht, die berechtigten
-     Interessen, die von dem \hyperref[itm:04-7]{Verantwortlichen} oder einem Dritten verfolgt werden;
+     Interessen, die von dem \hyperref[itm:04-7]{Verantwortlichen} oder einem \hyperref[itm:04-10]{Dritten} verfolgt werden;
     \label{itm:13-1d}
 
     \item gegebenenfalls die \hyperref[itm:04-9]{Empfänger} oder Kategorien von \hyperref[itm:04-9]{Empfängern} der \hyperref[itm:04-1]{personenbezogenen Daten} und
