--- a/artikel/62.tex
+++ b/artikel/62.tex
@@ -42,7 +42,7 @@
    geleistet hat.
   \label{itm:62-5}
 
-  \item Unbeschadet der Ausübung seiner Rechte gegenüber Dritten und mit Ausnahme des \hyperref[itm:62-5]{Absatzes 5}
+  \item Unbeschadet der Ausübung seiner Rechte gegenüber \hyperref[itm:04-10]{Dritten} und mit Ausnahme des \hyperref[itm:62-5]{Absatzes 5}
    verzichtet jeder Mitgliedstaat in dem Fall des \hyperref[itm:62-1]{Absatzes 1} darauf, den in \hyperref[itm:62-4]
    {Absatz 4} genannten Betrag des erlittenen Schadens anderen Mitgliedstaaten gegenüber geltend zu machen.
   \label{itm:62-6}
