--- a/artikel/14.tex
+++ b/artikel/14.tex
@@ -50,7 +50,7 @@
     \label{itm:14-2a}
 
     \item wenn die \hyperref[itm:04-2]{Verarbeitung} auf \hyperref[itm:06-1f]{Artikel 6 Absatz 1 Buchstabe f} beruht, die berechtigten
-     Interessen, die von dem \hyperref[itm:04-7]{Verantwortlichen} oder einem Dritten verfolgt werden;
+     Interessen, die von dem \hyperref[itm:04-7]{Verantwortlichen} oder einem \hyperref[itm:04-10]{Dritten} verfolgt werden;
     \label{itm:14-2b}
 
     \item das Bestehen eines Rechts auf Auskunft seitens des \hyperref[itm:04-7]{Verantwortlichen} über die betreffenden personenbezogenen
