--- a/artikel/76.tex
+++ b/artikel/76.tex
@@ -10,7 +10,7 @@
    erforderlich hält.
   \label{itm:76-1}
 
-  \item Der Zugang zu Dokumenten, die Mitgliedern des Ausschusses, Sachverständigen und Vertretern von Dritten vorgelegt
+  \item Der Zugang zu Dokumenten, die Mitgliedern des Ausschusses, Sachverständigen und Vertretern von \hyperref[itm:04-10]{Dritten} vorgelegt
    werden, wird durch die Verordnung (EG) Nr. 1049/2001\todo{recherchieren} des Europäischen Parlaments und des Rates
    geregelt.
   \label{itm:76-2}
