--- a/artikel/06.tex
+++ b/artikel/06.tex
@@ -11,7 +11,7 @@
 
   \begin{enumerate}
   
-    \item Die \hyperref[itm:04-1]{betroffene Person} hat ihre Einwilligung zu der \hyperref[itm:04-2]{Verarbeitung} der sie betreffenden \hyperref[itm:04-1]{personenbezogenen Daten}
+    \item Die \hyperref[itm:04-1]{betroffene Person} hat ihre \hyperref[itm:04-11]{Einwilligung} zu der \hyperref[itm:04-2]{Verarbeitung} der sie betreffenden \hyperref[itm:04-1]{personenbezogenen Daten}
      für einen oder mehrere bestimmte Zwecke gegeben;
     \label{itm:06-1a}
 
@@ -76,7 +76,7 @@
    liegendes Ziel verfolgen und in einem angemessenen Verhältnis zu dem verfolgten legitimen Zweck stehen.
 
   \item Beruht die \hyperref[itm:04-2]{Verarbeitung} zu einem anderen Zweck als zu demjenigen, zu dem die \hyperref[itm:04-1]{personenbezogenen Daten} erhoben
-   wurden, nicht auf der Einwilligung der \hyperref[itm:04-1]{betroffenen Person} oder auf einer Rechtsvorschrift der Union oder der
+   wurden, nicht auf der \hyperref[itm:04-11]{Einwilligung} der \hyperref[itm:04-1]{betroffenen Person} oder auf einer Rechtsvorschrift der Union oder der
    Mitgliedstaaten, die in einer demokratischen Gesellschaft eine notwendige und verhältnismäßige Maßnahme zum Schutz
    der in \hyperref[itm:23-1]{Artikel 23 Absatz 1} genannten Ziele darstellt, so berücksichtigt der \hyperref[itm:04-7]{Verantwortliche} --
    um festzustellen, ob die \hyperref[itm:04-2]{Verarbeitung} zu einem anderen Zweck mit demjenigen, zu dem die \hyperref[itm:04-1]{personenbezogenen Daten}
