--- a/artikel/08.tex
+++ b/artikel/08.tex
@@ -9,7 +9,7 @@
   \item Gilt \hyperref[itm:06-1a]{Artikel 6 Absatz 1 Buchstabe a} bei einem Angebot von \hyperref[itm:04-28]{Diensten der
    Informationsgesellschaft}, das einem Kind direkt gemacht wird, so ist die \hyperref[itm:04-2]{Verarbeitung} der \hyperref[itm:04-1]{personenbezogenen Daten}
    des Kindes rechtmäßig, wenn das Kind das sechzehnte Lebensjahr vollendet hat. Hat das Kind noch nicht das sechzehnte
-   Lebensjahr vollendet, so ist diese \hyperref[itm:04-2]{Verarbeitung} nur rechtmäßig, sofern und soweit diese Einwilligung durch den
+   Lebensjahr vollendet, so ist diese \hyperref[itm:04-2]{Verarbeitung} nur rechtmäßig, sofern und soweit diese \hyperref[itm:04-11]{Einwilligung} durch den
    Träger der elterlichen Verantwortung für das Kind oder mit dessen Zustimmung erteilt wird. 
   \label{itm:08-1}
 
@@ -17,7 +17,7 @@
    jedoch nicht unter dem vollendeten dreizehnten Lebensjahr liegen darf.
 
   \item Der \hyperref[itm:04-7]{Verantwortliche} unternimmt unter Berücksichtigung der verfügbaren Technik angemessene Anstrengungen, um sich
-   in solchen Fällen zu vergewissern, dass die Einwilligung durch den Träger der elterlichen Verantwortung für das Kind
+   in solchen Fällen zu vergewissern, dass die \hyperref[itm:04-11]{Einwilligung} durch den Träger der elterlichen Verantwortung für das Kind
    oder mit dessen Zustimmung erteilt wurde.
   \label{itm:08-2}
 
