--- a/artikel/09.tex
+++ b/artikel/09.tex
@@ -19,7 +19,7 @@
   
     \item Die \hyperref[itm:04-1]{betroffene Person} hat in die \hyperref[itm:04-2]{Verarbeitung} der genannten \hyperref[itm:04-1]{personenbezogenen Daten} für einen oder mehrere
      festgelegte Zwecke ausdrücklich eingewilligt, es sei denn, nach Unionsrecht oder dem Recht der Mitgliedstaaten
-     kann das Verbot nach \hyperref[itm:09-1]{Absatz 1} durch die Einwilligung der \hyperref[itm:04-1]{betroffenen Person} nicht aufgehoben
+     kann das Verbot nach \hyperref[itm:09-1]{Absatz 1} durch die \hyperref[itm:04-11]{Einwilligung} der \hyperref[itm:04-1]{betroffenen Person} nicht aufgehoben
      werden,
     \label{itm:09-2a}
 
@@ -32,7 +32,7 @@
 
     \item die \hyperref[itm:04-2]{Verarbeitung} ist zum Schutz lebenswichtiger Interessen der \hyperref[itm:04-1]{betroffenen Person} oder einer anderen
      natürlichen Person erforderlich und die \hyperref[itm:04-1]{betroffene Person} ist aus körperlichen oder rechtlichen Gründen
-     außerstande, ihre Einwilligung zu geben,
+     außerstande, ihre \hyperref[itm:04-11]{Einwilligung} zu geben,
     \label{itm:09-2c}
 
     \item die \hyperref[itm:04-2]{Verarbeitung} erfolgt auf der Grundlage geeigneter Garantien durch eine politisch, weltanschaulich,
@@ -40,7 +40,7 @@
      Gewinnerzielungsabsicht im Rahmen ihrer rechtmäßigen Tätigkeiten und unter der Voraussetzung, dass sich die
      \hyperref[itm:04-2]{Verarbeitung} ausschließlich auf die Mitglieder oder ehemalige Mitglieder der Organisation oder auf Personen, die
      im Zusammenhang mit deren Tätigkeitszweck regelmäßige Kontakte mit ihr unterhalten, bezieht und die
-     \hyperref[itm:04-1]{personenbezogenen Daten} nicht ohne Einwilligung der \hyperref[itm:04-1]{betroffenen Personen} nach außen offengelegt werden,
+     \hyperref[itm:04-1]{personenbezogenen Daten} nicht ohne \hyperref[itm:04-11]{Einwilligung} der \hyperref[itm:04-1]{betroffenen Personen} nach außen offengelegt werden,
     \label{itm:09-2d}
 
     \item die \hyperref[itm:04-2]{Verarbeitung} bezieht sich auf \hyperref[itm:04-1]{personenbezogene Daten}, die die \hyperref[itm:04-1]{betroffene Person} offensichtlich öffentlich
