--- a/artikel/17.tex
+++ b/artikel/17.tex
@@ -17,7 +17,7 @@
      wurden, nicht mehr notwendig.
     \label{itm:17-1a}
 
-    \item Die \hyperref[itm:04-1]{betroffene Person} widerruft ihre Einwilligung, auf die sich die \hyperref[itm:04-2]{Verarbeitung} gemäß \hyperref[itm:06-1a]
+    \item Die \hyperref[itm:04-1]{betroffene Person} widerruft ihre \hyperref[itm:04-11]{Einwilligung}, auf die sich die \hyperref[itm:04-2]{Verarbeitung} gemäß \hyperref[itm:06-1a]
      {Artikel 6 Absatz 1 Buchstabe a} oder \hyperref[itm:09-2a]{Artikel 9 Absatz 2 Buchstabe a} stützte, und es fehlt
      an einer anderweitigen Rechtsgrundlage für die \hyperref[itm:04-2]{Verarbeitung}.
     \label{itm:17-1b}
