--- a/artikel/18.tex
+++ b/artikel/18.tex
@@ -32,7 +32,7 @@
   \end{enumerate}
 
   \item Wurde die \hyperref[itm:04-2]{Verarbeitung} gemäß \hyperref[itm:18-1]{Absatz 1} eingeschränkt, so dürfen diese \hyperref[itm:04-1]{personenbezogenen Daten}
-   -- von ihrer Speicherung abgesehen -- nur mit Einwilligung der \hyperref[itm:04-1]{betroffenen Person} oder zur Geltendmachung, Ausübung
+   -- von ihrer Speicherung abgesehen -- nur mit \hyperref[itm:04-11]{Einwilligung} der \hyperref[itm:04-1]{betroffenen Person} oder zur Geltendmachung, Ausübung
    oder Verteidigung von Rechtsansprüchen oder zum Schutz der Rechte einer anderen natürlichen oder juristischen
    Person oder aus Gründen eines wichtigen öffentlichen Interesses der Union oder eines Mitgliedstaats verarbeitet
    werden.
