--- a/artikel/20.tex
+++ b/artikel/20.tex
@@ -14,7 +14,7 @@
 
   \begin{enumerate}
   
-    \item die \hyperref[itm:04-2]{Verarbeitung} auf einer Einwilligung gemäß \hyperref[itm:06-1a]{Artikel 6 Absatz 1 Buchstabe a} oder
+    \item die \hyperref[itm:04-2]{Verarbeitung} auf einer \hyperref[itm:04-11]{Einwilligung} gemäß \hyperref[itm:06-1a]{Artikel 6 Absatz 1 Buchstabe a} oder
     \hyperref[itm:09-2a]{Artikel 9 Absatz 2 Buchstabe a} oder auf einem Vertrag gemäß \hyperref[itm:06-1b]{Artikel 6
      Absatz 1 Buchstabe b} beruht und
   \label{itm:20-1a}
