--- a/artikel/22.tex
+++ b/artikel/22.tex
@@ -25,7 +25,7 @@
      berechtigten Interessen der \hyperref[itm:04-1]{betroffenen Person} enthalten oder
     \label{itm:22-2b}
 
-    \item mit ausdrücklicher Einwilligung der \hyperref[itm:04-1]{betroffenen Person} erfolgt.
+    \item mit ausdrücklicher \hyperref[itm:04-11]{Einwilligung} der \hyperref[itm:04-1]{betroffenen Person} erfolgt.
     \label{itm:22-2c}
 
   \end{enumerate}
