--- a/artikel/40.tex
+++ b/artikel/40.tex
@@ -37,7 +37,7 @@
     \item Ausübung der Rechte \hyperref[itm:04-1]{betroffener Personen};
     \label{itm:40-2f}
 
-    \item Unterrichtung und Schutz von Kindern und Art und Weise, in der die Einwilligung des Trägers der elterlichen
+    \item Unterrichtung und Schutz von Kindern und Art und Weise, in der die \hyperref[itm:04-11]{Einwilligung} des Trägers der elterlichen
      Verantwortung für das Kind einzuholen ist;
     \label{itm:40-2g}
 
