--- a/artikel/49.tex
+++ b/artikel/49.tex
@@ -35,7 +35,7 @@
 
     \item die Übermittlung ist zum Schutz lebenswichtiger Interessen der \hyperref[itm:04-1]{betroffenen Person} oder anderer Personen
      erforderlich, sofern die \hyperref[itm:04-1]{betroffene Person} aus physischen oder rechtlichen Gründen außerstande ist, ihre
-     Einwilligung zu geben,
+     \hyperref[itm:04-11]{Einwilligung} zu geben,
     \label{itm:49-1-1f}
 
     \item die Übermittlung erfolgt aus einem Register, das gemäß dem Recht der Union oder der Mitgliedstaaten zur
