--- a/artikel/83.tex
+++ b/artikel/83.tex
@@ -96,7 +96,7 @@
 
   \begin{enumerate}
   
-    \item die Grundsätze für die \hyperref[itm:04-2]{Verarbeitung}, einschließlich der Bedingungen für die Einwilligung, gemäß den Artikeln
+    \item die Grundsätze für die \hyperref[itm:04-2]{Verarbeitung}, einschließlich der Bedingungen für die \hyperref[itm:04-11]{Einwilligung}, gemäß den Artikeln
      \hyperref[ch:5]{5}, \hyperref[ch:6]{6}, \hyperref[ch:7]{7} und \hyperref[ch:9]{9};
     \label{itm:83-5a}
 
