--- a/artikel/14.tex
+++ b/artikel/14.tex
@@ -12,7 +12,7 @@
 
   \begin{enumerate}
   
-    \item den Namen und die Kontaktdaten des \hyperref[itm:04-7]{Verantwortlichen} sowie gegebenenfalls seines Vertreters;
+    \item den Namen und die Kontaktdaten des \hyperref[itm:04-7]{Verantwortlichen} sowie gegebenenfalls seines \hyperref[itm:04-17]{Vertreters};
     \label{itm:14-1a}
 
     \item zusätzlich die Kontaktdaten des Datenschutzbeauftragten;
