--- a/artikel/27.tex
+++ b/artikel/27.tex
@@ -7,7 +7,7 @@
 \begin{enumerate}
 
   \item In den Fällen gemäß \hyperref[itm:03-2]{Artikel 3 Absatz 2} benennt der \hyperref[itm:04-7]{Verantwortliche} oder der
-   \hyperref[itm:04-8]{Auftragsverarbeiter} schriftlich einen Vertreter in der Union.
+   \hyperref[itm:04-8]{Auftragsverarbeiter} schriftlich einen \hyperref[itm:04-17]{Vertreter} in der Union.
   \label{itm:27-1}
 
   \item Die Pflicht gemäß \hyperref[itm:27-1]{Absatz 1 des vorliegenden Artikels} gilt nicht für
@@ -27,17 +27,17 @@
 
   \end{enumerate}
 
-  \item Der Vertreter muss in einem der Mitgliedstaaten niedergelassen sein, in denen die \hyperref[itm:04-1]{betroffenen Personen}, deren
+  \item Der \hyperref[itm:04-17]{Vertreter} muss in einem der Mitgliedstaaten niedergelassen sein, in denen die \hyperref[itm:04-1]{betroffenen Personen}, deren
    \hyperref[itm:04-1]{personenbezogene Daten} im Zusammenhang mit den ihnen angebotenen Waren oder Dienstleistungen verarbeitet werden oder
    deren Verhalten beobachtet wird, sich befinden.
   \label{itm:27-3}
 
-  \item Der Vertreter wird durch den \hyperref[itm:04-7]{Verantwortlichen} oder den \hyperref[itm:04-8]{Auftragsverarbeiter} beauftragt, zusätzlich zu diesem oder
+  \item Der \hyperref[itm:04-17]{Vertreter} wird durch den \hyperref[itm:04-7]{Verantwortlichen} oder den \hyperref[itm:04-8]{Auftragsverarbeiter} beauftragt, zusätzlich zu diesem oder
    an seiner Stelle insbesondere für \hyperref[itm:04-21]{Aufsichtsbehörden} und \hyperref[itm:04-1]{betroffene Personen} bei sämtlichen Fragen im Zusammenhang
    mit der \hyperref[itm:04-2]{Verarbeitung} zur Gewährleistung der Einhaltung dieser Verordnung als Anlaufstelle zu dienen.
   \label{itm:27-4}
 
-  \item Die Benennung eines Vertreters durch den \hyperref[itm:04-7]{Verantwortlichen} oder den \hyperref[itm:04-8]{Auftragsverarbeiter} erfolgt unbeschadet
+  \item Die Benennung eines \hyperref[itm:04-17]{Vertreters} durch den \hyperref[itm:04-7]{Verantwortlichen} oder den \hyperref[itm:04-8]{Auftragsverarbeiter} erfolgt unbeschadet
    etwaiger rechtlicher Schritte gegen den \hyperref[itm:04-7]{Verantwortlichen} oder den \hyperref[itm:04-8]{Auftragsverarbeiter} selbst.
   \label{itm:27-5}
 
