--- a/artikel/35.tex
+++ b/artikel/35.tex
@@ -85,7 +85,7 @@
    berücksichtigen.
   \label{itm:35-8}
 
-  \item Der \hyperref[itm:04-7]{Verantwortliche} holt gegebenenfalls den Standpunkt der \hyperref[itm:04-1]{betroffenen Personen} oder ihrer Vertreter zu der
+  \item Der \hyperref[itm:04-7]{Verantwortliche} holt gegebenenfalls den Standpunkt der \hyperref[itm:04-1]{betroffenen Personen} oder ihrer \hyperref[itm:04-17]{Vertreter} zu der
    beabsichtigten \hyperref[itm:04-2]{Verarbeitung} unbeschadet des Schutzes gewerblicher oder öffentlicher Interessen oder der Sicherheit
    der Verarbeitungsvorgänge ein.
   \label{itm:35-9}
