--- a/artikel/58.tex
+++ b/artikel/58.tex
@@ -11,7 +11,7 @@
 
   \begin{enumerate}
   
-    \item den \hyperref[itm:04-7]{Verantwortlichen}, den \hyperref[itm:04-8]{Auftragsverarbeiter} und gegebenenfalls den Vertreter des \hyperref[itm:04-7]{Verantwortlichen} oder des
+    \item den \hyperref[itm:04-7]{Verantwortlichen}, den \hyperref[itm:04-8]{Auftragsverarbeiter} und gegebenenfalls den \hyperref[itm:04-17]{Vertreter} des \hyperref[itm:04-7]{Verantwortlichen} oder des
      \hyperref[itm:04-8]{Auftragsverarbeiters} anzuweisen, alle Informationen bereitzustellen, die für die Erfüllung ihrer Aufgaben
      erforderlich sind,
     \label{itm:58-1a}
