--- a/artikel/68.tex
+++ b/artikel/68.tex
@@ -14,16 +14,16 @@
   \label{itm:68-2}
 
   \item Der Ausschuss besteht aus dem Leiter einer \hyperref[itm:04-21]{Aufsichtsbehörde} jedes Mitgliedstaats und dem Europäischen
-   Datenschutzbeauftragten oder ihren jeweiligen Vertretern.
+   Datenschutzbeauftragten oder ihren jeweiligen \hyperref[itm:04-17]{Vertretern}.
   \label{itm:68-3}
 
   \item Ist in einem Mitgliedstaat mehr als eine \hyperref[itm:04-21]{Aufsichtsbehörde} für die Überwachung der Anwendung der nach Maßgabe
    dieser Verordnung erlassenen Vorschriften zuständig, so wird im Einklang mit den Rechtsvorschriften dieses
-   Mitgliedstaats ein gemeinsamer Vertreter benannt.
+   Mitgliedstaats ein gemeinsamer \hyperref[itm:04-17]{Vertreter} benannt.
   \label{itm:68-4}
 
   \item Die Kommission ist berechtigt, ohne Stimmrecht an den Tätigkeiten und Sitzungen des Ausschusses teilzunehmen.
-   Die Kommission benennt einen Vertreter. Der Vorsitz des Ausschusses unterrichtet die Kommission über die Tätigkeiten
+   Die Kommission benennt einen \hyperref[itm:04-17]{Vertreter}. Der Vorsitz des Ausschusses unterrichtet die Kommission über die Tätigkeiten
    des Ausschusses.
   \label{itm:68-5}
 
