--- a/artikel/30.tex
+++ b/artikel/30.tex
@@ -6,14 +6,14 @@
 
 \begin{enumerate}
 
-  \item Jeder \hyperref[itm:04-7]{Verantwortliche} und gegebenenfalls sein Vertreter führen ein Verzeichnis aller Verarbeitungstätigkeiten,
+  \item Jeder \hyperref[itm:04-7]{Verantwortliche} und gegebenenfalls sein \hyperref[itm:04-17]{Vertreter} führen ein Verzeichnis aller Verarbeitungstätigkeiten,
    die ihrer Zuständigkeit unterliegen. Dieses Verzeichnis enthält sämtliche folgenden Angaben:
   \label{itm:30-1}
 
   \begin{enumerate}
   
     \item den Namen und die Kontaktdaten des \hyperref[itm:04-7]{Verantwortlichen} und gegebenenfalls des gemeinsam mit ihm \hyperref[itm:04-7]{Verantwortlichen},
-     des Vertreters des \hyperref[itm:04-7]{Verantwortlichen} sowie eines etwaigen Datenschutzbeauftragten;
+     des \hyperref[itm:04-17]{Vertreters} des \hyperref[itm:04-7]{Verantwortlichen} sowie eines etwaigen Datenschutzbeauftragten;
     \label{itm:30-1a}
 
     \item die Zwecke der \hyperref[itm:04-2]{Verarbeitung};
@@ -41,14 +41,14 @@
 
   \end{enumerate}
 
-  \item Jeder \hyperref[itm:04-8]{Auftragsverarbeiter} und gegebenenfalls sein Vertreter führen ein Verzeichnis zu allen Kategorien von im
+  \item Jeder \hyperref[itm:04-8]{Auftragsverarbeiter} und gegebenenfalls sein \hyperref[itm:04-17]{Vertreter} führen ein Verzeichnis zu allen Kategorien von im
    Auftrag eines \hyperref[itm:04-7]{Verantwortlichen} durchgeführten Tätigkeiten der \hyperref[itm:04-2]{Verarbeitung}, die Folgendes enthält:
   \label{itm:30-2}
 
   \begin{enumerate}
   
     \item den Namen und die Kontaktdaten des \hyperref[itm:04-8]{Auftragsverarbeiters} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} und jedes
-     \hyperref[itm:04-7]{Verantwortlichen}, in dessen Auftrag der \hyperref[itm:04-8]{Auftragsverarbeiter} tätig ist, sowie gegebenenfalls des Vertreters des
+     \hyperref[itm:04-7]{Verantwortlichen}, in dessen Auftrag der \hyperref[itm:04-8]{Auftragsverarbeiter} tätig ist, sowie gegebenenfalls des \hyperref[itm:04-17]{Vertreters} des
      \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]{Auftragsverarbeiters} und eines etwaigen Datenschutzbeauftragten;
     \label{itm:30-2a}
 
@@ -71,7 +71,7 @@
    führen, was auch in einem elektronischen Format erfolgen kann.
   \label{itm:30-3}
 
-  \item Der \hyperref[itm:04-7]{Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} sowie gegebenenfalls der Vertreter des \hyperref[itm:04-7]{Verantwortlichen} oder
+  \item Der \hyperref[itm:04-7]{Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} sowie gegebenenfalls der \hyperref[itm:04-17]{Vertreter} des \hyperref[itm:04-7]{Verantwortlichen} oder
    des \hyperref[itm:04-8]{Auftragsverarbeiters} stellen der \hyperref[itm:04-21]{Aufsichtsbehörde} das Verzeichnis auf Anfrage zur Verfügung.
   \label{itm:30-4}
 
